<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="go_back_button">назад</string>
    <string name="clear_button">очистить</string>
    <string name="android_course_link" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="my_email" translatable="false">danila.filin@yandex.ru</string>
    <string name="default_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="default_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="ys_offer_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="track_image">Обложка трека</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="internet_issue">Проблема со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="placeholder_image" translatable="false">placeholder_image</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_searched">История поиска</string>
    <string name="album_image">album_image</string>
    <string name="track_length">Длительность</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="play_button">Play</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="default_playback_time" translatable="false">00:00</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorites_title">Избранные треки</string>
    <string name="playlists_title">Плейлисты</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="playlist_not_created">Не удалось создать плейлист</string>
    <string name="playlist_empty_text">Пока нет треков</string>
    <string name="exit_dialog_title">Завершить создание плейлиста?</string>
    <string name="exit_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="exit_dialog_close">Завершить</string>
    <string name="exit_dialog_cancel">Отмена</string>
    <string name="track_added">Добавлено в плейлист %1$s</string>
    <string name="track_not_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="something_wrong">Что-то пошло не так…</string>
    <string name="dash" translatable="false">dash</string>
    <string name="menu" translatable="false">menu</string>
    <string name="delete_track_dialog_title">Удалить трек</string>
    <string name="delete_track_dialog_text">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_yes">Удалить</string>
    <string name="delete_no">Отмена</string>
    <string name="track_deleted_confirmation">Трек %1$s удален из плейлиста</string>
    <string name="no_tracks_for_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="menu_share">Поделиться</string>
    <string name="menu_edit_playlist">Редактировать информацию</string>
    <string name="menu_delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_dialog_text">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="edit_playlist_save">Сохранить</string>
</resources>