<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_black"
    tools:context=".ui.new_playlist.NewPlaylistFragment">

    <ImageButton
        android:id="@+id/bt_back"
        android:layout_width="@dimen/size_48"
        android:layout_height="@dimen/size_48"
        android:layout_marginStart="@dimen/space_4"
        android:layout_marginTop="@dimen/space_4"
        android:background="@color/white_black"
        android:contentDescription="@string/go_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        app:tint="@color/black_white" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_48"
        android:layout_marginTop="@dimen/space_4"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/space_12"
        android:paddingEnd="@dimen/space_12"
        android:text="@string/new_playlist"
        android:textAppearance="@style/ys_medium_22"
        android:textColor="@color/black_white"
        app:layout_constraintStart_toEndOf="@id/bt_back"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playlist_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_dashed_rectangle"
        android:contentDescription="@string/playlist_cover"
        android:scaleType="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:srcCompat="@drawable/ic_new_playlist" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_marginTop="32dp"
        android:hint="@string/playlist_name"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/space_16"
        android:hint="@string/playlist_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_create_playlist"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:text="@string/playlist_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>