<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_black"
    android:orientation="vertical"
    tools:viewBindingIgnore="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/space_8"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search_back"
            style="@style/BackNavigationButton"
            android:contentDescription="@string/go_back_button"
            app:tint="@color/black_white" />

        <TextView
            style="@style/TopTitleStyle"
            android:text="@string/search"
            android:textColor="@color/black_white" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_24"
        android:background="@drawable/rounded_rect"
        android:backgroundTint="@color/search_bg">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:autofillHints="@string/search"
            android:backgroundTint="@color/search_bg"
            android:drawableStart="@drawable/ic_search_16"
            android:drawablePadding="@dimen/space_8"
            android:drawableTint="@color/gray_black"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/space_12"
            android:paddingEnd="@dimen/space_12"
            android:singleLine="true"
            android:textAppearance="@style/ys_regular_16"
            android:textColor="@color/yp_black"
            android:textColorHint="@color/gray_black"
            android:textCursorDrawable="@drawable/text_cursor" />

        <ImageView
            android:id="@+id/clearSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginHorizontal="@dimen/space_12"
            android:contentDescription="@string/clear_button"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            app:tint="@color/gray_black" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="114dp"
            android:indeterminateTint="@color/main_blue_color"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_track_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/placeholder_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_86"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/placeholder_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_16"
                android:contentDescription="@string/placeholder_image"
                android:src="@drawable/ic_internet_issue" />

            <TextView
                android:id="@+id/placeholder_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/space_24"
                android:layout_marginBottom="@dimen/space_24"
                android:text="@string/internet_issue"
                android:textAlignment="center"
                android:textAppearance="@style/ys_medium_19"
                android:textColor="@color/black_white" />

            <Button
                android:id="@+id/placeholder_refresh"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_36"
                android:backgroundTint="@color/black_white"
                android:insetTop="@dimen/zeroDP"
                android:insetBottom="@dimen/zeroDP"
                android:paddingHorizontal="@dimen/space_14"
                android:paddingVertical="@dimen/space_6"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:textAppearance="@style/ys_medium_14"
                android:textColor="@color/white_black"
                app:cornerRadius="@dimen/corner_radius_PH_button" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/space_16">

            <LinearLayout
                android:id="@+id/tracks_history_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_26"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tracks_history_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/space_24"
                    android:layout_marginBottom="@dimen/space_20"
                    android:text="@string/you_searched"
                    android:textAlignment="center"
                    android:textAppearance="@style/ys_medium_19"
                    android:textColor="@color/black_white" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_tracks_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:itemCount="3"
                    tools:listitem="@layout/search_item_view" />

                <Button
                    android:id="@+id/tracks_history_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/size_36"
                    android:layout_marginTop="@dimen/space_24"
                    android:backgroundTint="@color/black_white"
                    android:insetTop="@dimen/zeroDP"
                    android:insetBottom="@dimen/zeroDP"
                    android:paddingHorizontal="@dimen/space_14"
                    android:paddingVertical="@dimen/space_6"
                    android:text="@string/clear_history"
                    android:textAllCaps="false"
                    android:textAppearance="@style/ys_medium_14"
                    android:textColor="@color/white_black"
                    app:cornerRadius="@dimen/corner_radius_PH_button" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>


</LinearLayout>